# cudaminer-neoscrypt

./: .gitignore  Makefile.am  README.md  WINDOWS-BUILD.txt  api.cpp  build.sh  compat.h  configure.ac  cuda.cpp  cudaminer-config.h  cudaminer.cpp  cudaminer.sln  cudaminer.vcxproj  cudaminer.vcxproj.filters  example-cfg.json  hashlog.cpp  log.cpp  log.h  miner.h  neoscrypt.c  neoscrypt.h  nvml.cpp  stats.cpp  util.cpp
compat/: Makefile.am  localtime_r.h  unistd.h  winansi.c  winansi.h
compat/jansson/: dump.c  error.c  load.c
neoscrypt/: cuda_neoscrypt.cu  scanhash_neoscrypt.cpp
